Disable open-in-view feature

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -16,6 +16,7 @@ spring:
     change-log: db/dbchangelog-dev.yaml
   #Jpa/Hibernate:
   jpa:
+    open-in-view: false
     generate-ddl: true
     hibernate:
       ddl-auto: create-drop
