--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -16,6 +16,7 @@ spring:
     change-log: db/dbchangelog-prod.yaml
   #Jpa/Hibernate:
   jpa:
+    open-in-view: false
     generate-ddl: true
     hibernate:
       ddl-auto: validate
