--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -7,7 +7,7 @@ spring:
   banner:
     location: classpath:banner.txt
   datasource:
-    url: jdbc:mysql://localhost/trackexpensesapp?useUnicode=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost/trackexpensesapptest?useUnicode=true&serverTimezone=UTC
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -16,6 +16,7 @@ spring:
     change-log: db/dbchangelog-test.yaml
   #Jpa/Hibernate:
   jpa:
+    open-in-view: false
     generate-ddl: true
     hibernate:
       ddl-auto: create-drop
