--- a/src/main/resources/db/dbchangelog-dev.yaml
+++ b/src/main/resources/db/dbchangelog-dev.yaml
@@ -1,5 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/001-create-table-wallets.yaml
-#  - include:
-#      file: db/changelog/002-create-table-currensies.yaml
+  - include:
+      file: db/changelog/002-insert-into-wallets.yaml
