--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,10 +10,10 @@ services:
     deploy:
       resources:
         limits:
-          cpus: 0.5
-          memory: 512M
+          cpus: '0.5'
+          memory: '512M'
         reservations:
-          cpus: 0.25
-          memory: 128M
+          cpus: '0.25'
+          memory: '128M'
     ports:
       - '3306:3306'
