--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,29 +1,22 @@
-
 name: Run tests
 
-on:
-  workflow_dispatch:
-  pull_request:
-    branches: [ "develop" ]
-    types:
-      - opened
-      - reopened
-      - synchronize
-      - ready_for_review
-
+on: [push, fork, pull_request]
 
 jobs:
   run_tests:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
       - uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+
       - name: Run tests with Maven
         run: mvn -B test -Dspring.profiles.active=test --file pom.xml
 
