--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,6 +1,6 @@
 name: Run tests
 
-on: [push, fork]
+on: [ push, fork ]
 
 jobs:
   run_tests:
@@ -8,9 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-      - uses: actions/checkout@v3
-
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -21,4 +19,3 @@ jobs:
 
       - name: Run tests with Maven
         run: mvn -B test -Dspring.profiles.active=test --file pom.xml
-        
