--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,5 +1,5 @@
 application:
-  group: bycza-zagroda
+  group: zagrodnicy (Bycza-zagroda)
   version: 0.1
 
 #Datasource
@@ -7,7 +7,7 @@ spring:
   banner:
     location: classpath:banner.txt
   datasource:
-    url: jdbc:mysql://localhost/trackexpensesapp?useUnicode=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/trackexpensesapp?useUnicode=true&serverTimezone=UTC
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
