--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.8</version>
+                <configuration>
+                    <excludes>
+                        <exclude>pl/byczazagroda/trackexpensesappbackend/TrackExpensesAppBackendApplication.</exclude>
+                        <exclude>pl/byczazagroda/trackexpensesappbackend/exception/</exclude>
+                        <exclude>pl/byczazagroda/trackexpensesappbackend/config/*</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
