--- a/pom.xml
+++ b/pom.xml
@@ -95,8 +95,8 @@
                 <version>0.8.8</version>
                 <configuration>
                     <excludes>
-                        <exclude>pl/byczazagroda/trackexpensesappbackend/TrackExpensesAppBackendApplication.</exclude>
-                        <exclude>pl/byczazagroda/trackexpensesappbackend/exception/</exclude>
+                        <exclude>pl/byczazagroda/trackexpensesappbackend/TrackExpensesAppBackendApplication.class</exclude>
+                        <exclude>pl/byczazagroda/trackexpensesappbackend/exception/*</exclude>
                         <exclude>pl/byczazagroda/trackexpensesappbackend/config/*</exclude>
                     </excludes>
                 </configuration>
