--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <properties>
         <java.version>17</java.version>
         <testcontainers.version>1.17.2</testcontainers.version>
+        <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
     </properties>
 
     <dependencies>
@@ -50,6 +51,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${org.mapstruct.version}</version>
         </dependency>
 
         <!--    Test Dependencies    -->
@@ -95,7 +101,8 @@
                 <version>0.8.8</version>
                 <configuration>
                     <excludes>
-                        <exclude>pl/byczazagroda/trackexpensesappbackend/TrackExpensesAppBackendApplication.class</exclude>
+                        <exclude>pl/byczazagroda/trackexpensesappbackend/TrackExpensesAppBackendApplication.class
+                        </exclude>
                         <exclude>pl/byczazagroda/trackexpensesappbackend/exception/*</exclude>
                         <exclude>pl/byczazagroda/trackexpensesappbackend/config/*</exclude>
                     </excludes>
@@ -126,6 +133,22 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${org.mapstruct.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
