--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,6 +1,10 @@
 name: codecov
 
-on: [ workflow_dispatch]
+on:
+  push:
+    branches: 
+      - develop
+  workflow_dispatch:
 
 jobs:
   run_tests:
