--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -11,6 +11,9 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      connection-timeout: 500
+      maximum-pool-size: 5
 
   liquibase:
     change-log: db/dbchangelog-test.yaml
