--- a/src/main/resources/db/changelog/002-insert-into-wallet.yaml
+++ b/src/main/resources/db/changelog/002-insert-into-wallet.yaml
@@ -5,7 +5,7 @@ databaseChangeLog:
        changes:
          - loadData:
              file: db/changelog/data/data.csv
-             tableName: wallets
+             tableName: wallet
              separator: ','
              encoding: UTF-8
              columns:
@@ -13,8 +13,8 @@ databaseChangeLog:
                    name: id
                    type: bigint
                - column:
-                   name: firstname
+                   name: name
                    type: varchar(50)
                - column:
-                   name: lastname
-                   type: varchar(50)
+                   name: creation_date
+                   type: timestamp
