--- a/src/main/resources/db/changelog/002-insert-into-wallets.yaml
+++ b/src/main/resources/db/changelog/002-insert-into-wallets.yaml
@@ -13,8 +13,8 @@ databaseChangeLog:
                    name: id
                    type: bigint
                - column:
-                   name: firstname
+                   name: name
                    type: varchar(50)
                - column:
-                   name: lastname
-                   type: varchar(50)
+                   name: create_date
+                   type: datetime(6)
