--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -33,11 +33,11 @@ spring:
         format_sql: true
 
     show-sql: true
-logging:
-  level:
-    org:
-      hibernate:
-        format_sql: true
+#logging:
+#  level:
+#    org:
+#      hibernate:
+#        format_sql: true
 
 
 server:
