--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,14 @@
 version: '3.8'
 services:
-  track-expenses-docker:
-    container_name: track-expenses-container
+  backend:
+    build: .
+    ports:
+      - "8080:8080"
+    depends_on:
+      - database
+
+  database:
     image: mysql:8.0
-    restart: always
     environment:
       - MYSQL_DATABASE=trackexpensesapp
       - MYSQL_ROOT_PASSWORD=root
@@ -16,4 +21,62 @@ services:
           cpus: '0.25'
           memory: '128M'
     ports:
-      - '3306:3306'
+        - '3306:3306'
+    volumes:
+      - dbstore:/var/lib/mysql
+volumes:
+  dbstore:
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#version: '3.8'
+#services:
+#  track-expenses-docker:
+#    container_name: track-expenses-container
+#    image: mysql:8.0
+#    restart: always
+#    environment:
+#      - MYSQL_DATABASE=trackexpensesapp
+#      - MYSQL_ROOT_PASSWORD=root
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: '0.5'
+#          memory: '512M'
+#        reservations:
+#          cpus: '0.25'
+#          memory: '128M'
+#    ports:
+#      - '3306:3306'
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
