--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,22 @@
 version: '3.8'
 services:
-  track-expenses-docker:
-    container_name: track-expenses-container
-    image: mysql:8.0
+  backend:
+    build: .
     restart: always
     environment:
-      - MYSQL_DATABASE=trackexpensesapp
+      - SPRING_PROFILES_ACTIVE=dev
+    ports:
+      - "8080:8080"
+    depends_on:
+      - database
+
+  database:
+    image: mysql:8
+    restart: always
+    environment:
+      - MYSQL_PASSWORD=root
       - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=trackexpensesapp
     deploy:
       resources:
         limits:
@@ -17,3 +27,7 @@ services:
           memory: '128M'
     ports:
       - '3306:3306'
+    volumes:
+      - dbstore:/var/lib/mysql
+volumes:
+  dbstore:
