--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -1,6 +1,6 @@
 application:
   group: zagrodnicy (Bycza-zagroda)
-  version: 0.1
+  version: 0.2
 
 #Datasource
 spring:
@@ -14,6 +14,9 @@ spring:
     hikari:
       connection-timeout: 500
       maximum-pool-size: 5
+
+  jackson:
+    default-property-inclusion: non_empty
 
   liquibase:
     change-log: db/dbchangelog-test.yaml
