--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,33 +1,23 @@
 version: '3.8'
 services:
-#  backend:
-#    build: .
-#    restart: always
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=dev
-#    ports:
-#      - "8080:8080"
-#    depends_on:
-#      - database
-
-#
-#  database:
-#    image: mysql:8
-#    restart: always
-#    environment:
-#      - MYSQL_PASSWORD=root
-#      - MYSQL_ROOT_PASSWORD=root
-#      - MYSQL_DATABASE=trackexpensesapp
-
-  #database container
-  track-expenses-docker:
-    container_name: track-expenses-container
-    image: mysql:8.0
+  backend:
+    build: ./database
     restart: always
     environment:
-      - MYSQL_DATABASE=trackexpensesapp
+      - SPRING_PROFILES_ACTIVE=dev
+    ports:
+      - "8080:8080"
+    depends_on:
+      - database
+
+  database:
+    image: mysql:8
+    restart: always
+    environment:
+      - MYSQL_PASSWORD=root
       - MYSQL_ROOT_PASSWORD=root
-    deploy: # od deploy tak samo
+      - MYSQL_DATABASE=trackexpensesapp
+    deploy:
       resources:
         limits:
           cpus: '0.5'
@@ -37,7 +27,7 @@ services:
           memory: '128M'
     ports:
       - '3306:3306'
-#    volumes:
-#      - dbstore:/var/lib/mysql
-#volumes:
-#  dbstore:
+    volumes:
+      - dbstore:/var/lib/mysql
+volumes:
+  dbstore:
