--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,41 +1,26 @@
 application:
   group: zagrodnicy (Bycza-zagroda)
-  version: 0.2
+  version: 0.1
 
 #Datasource
 spring:
   banner:
     location: classpath:banner.txt
   datasource:
-    url: jdbc:mysql://database:3306/trackexpensesapp?useUnicode=true&serverTimezone=UTC
+    url: jdbc:mysql://db:3306/trackexpensesapp?useUnicode=true&serverTimezone=UTC
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-  #to zeby wyrzucaly sie castomowe wyjatki gdy nie ma endointu jeszcze
-  mvc:
-    throw-exception-if-no-handler-found: true
-  web:
-    resources:
-      add-mappings: false
-
-  jackson:
-    default-property-inclusion: non_empty
-
   liquibase:
     change-log: db/dbchangelog-dev.yaml
-    drop-first: true
   #Jpa/Hibernate:
   jpa:
     open-in-view: false
     generate-ddl: true
     hibernate:
-      ddl-auto: none
-    ### temporary logging for debugging
-    properties:
-      hibernate:
-        format_sql: true
-
+      ddl-auto: create
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
 
 server:
