--- a/src/main/resources/db/changelog/001-create-table-wallets.yaml
+++ b/src/main/resources/db/changelog/001-create-table-wallets.yaml
@@ -33,5 +33,6 @@ databaseChangeLog:
                 -  column:
                      name: creation_date
                      type: timestamp
+                     # type: datetime(6) TODO choose type
                      constraints:
                        nullable: false
