--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -14,12 +14,13 @@ spring:
 
   liquibase:
     change-log: db/dbchangelog-dev.yaml
+    drop-first: true
   #Jpa/Hibernate:
   jpa:
     open-in-view: false
     generate-ddl: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
 
