--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -12,6 +12,13 @@ spring:
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+    #to zeby wyrzucaly sie castomowe wyjatki gdy nie ma endointu jeszcze
+  mvc:
+    throw-exception-if-no-handler-found: true
+  web:
+    resources:
+      add-mappings: false
+
   liquibase:
     change-log: db/dbchangelog-dev.yaml
     drop-first: true
