--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -1,6 +1,6 @@
 application:
   group: zagrodnicy (Bycza-zagroda)
-  version: 0.1
+  version: 0.2.0
 
 #Datasource
 spring:
@@ -15,14 +15,18 @@ spring:
       connection-timeout: 500
       maximum-pool-size: 5
 
+  jackson:
+    default-property-inclusion: non_empty
+
   liquibase:
     change-log: db/dbchangelog-test.yaml
+    drop-first: true
   #Jpa/Hibernate:
   jpa:
     open-in-view: false
     generate-ddl: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
 
     show-sql: true
 
