--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,25 +1,29 @@
 application:
   group: zagrodnicy (Bycza-zagroda)
-  version: 0.1
+  version: 0.2.0
 
 #Datasource
 spring:
   banner:
     location: classpath:banner.txt
   datasource:
-    url: jdbc:mysql://localhost:3306/trackexpensesapp?useUnicode=true&serverTimezone=UTC
+    url: jdbc:mysql://${DB_SERVER}:${DB_PORT}/trackexpensesapp?useUnicode=true&serverTimezone=UTC
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  jackson:
+    default-property-inclusion: non_empty
+
   liquibase:
     change-log: db/dbchangelog-prod.yaml
+    drop-first: true # TODO delete this line before release version 1.0.0
   #Jpa/Hibernate:
   jpa:
     open-in-view: false
     generate-ddl: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
 
     show-sql: true
 
