--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -7,7 +7,7 @@ spring:
   banner:
     location: classpath:banner.txt
   datasource:
-    url: jdbc:mysql://${DB_SERVER}:${DB_PORT}/trackexpensesapp?useUnicode=true&serverTimezone=UTC
+    url: jdbc:mysql://${DB_SERVER}:${DB_PORT}/${DB_NAME}?useUnicode=true&serverTimezone=UTC
     username: ${DB_USER}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
