refactor: Improve naming convention

--- a/src/main/resources/db/changelog/003-create-table-financial_transactions.yaml
+++ b/src/main/resources/db/changelog/003-create-table-financial_transactions.yaml
@@ -29,7 +29,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: creation_date
+                  name: transaction_date
                   type: timestamp
                   constraints:
                     nullable: false
