--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -26,9 +26,9 @@ spring:
   #Jpa/Hibernate:
   jpa:
     open-in-view: false
-    generate-ddl: true
+    generate-ddl: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
     database-platform: org.hibernate.dialect.MySQL8Dialect
     #do debugowania sql
     show-sql: true
