--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -21,9 +21,9 @@ spring:
   #Jpa/Hibernate:
   jpa:
     open-in-view: false
-    generate-ddl: true
+    generate-ddl: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
 
     show-sql: true
 
