--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -24,7 +24,7 @@ spring:
   #Jpa/Hibernate:
   jpa:
     open-in-view: false
-    generate-ddl: true
+    generate-ddl: false
     hibernate:
       ddl-auto: none
 
