--- a/src/main/resources/db/changelog/003-create-table-financial_transactions.yaml
+++ b/src/main/resources/db/changelog/003-create-table-financial_transactions.yaml
@@ -18,14 +18,12 @@ databaseChangeLog:
                   type: bigint
               - column:
                   name: transaction_type
-                  type: varchar(50)
+                  type: varchar(255)
                   constraints:
                     nullable: false
               - column:
                   name: amount
-                  type: decimal
-                  precision: 10
-                  scale: 2
+                  type: decimal(10,2)
                   constraints:
                     nullable: false
               - column:
@@ -36,8 +34,15 @@ databaseChangeLog:
               - column:
                   name: description
                   type: varchar(255)
-              - addForeignKeyConstraint:
-                  baseColumnNames: wallet_id
-                  baseTableName: financial_transactions
-                  referencedColumnNames: id
-                  referencedTableName: wallets
+  - changeSet:
+      id: "5"
+      author: dstuzynski
+      changes:
+        - addForeignKeyConstraint:
+            constraintName: fk_financial_transactions_wallet_id
+            baseColumnNames: wallet_id
+            baseTableName: financial_transactions
+            referencedColumnNames: id
+            referencedTableName: wallets
+            onDelete: CASCADE
+            onUpdate: CASCADE
