refactor: Make wallet_id nullable false

--- a/src/main/resources/db/changelog/003-create-table-financial_transactions.yaml
+++ b/src/main/resources/db/changelog/003-create-table-financial_transactions.yaml
@@ -16,6 +16,8 @@ databaseChangeLog:
               - column:
                   name: wallet_id
                   type: bigint
+                  constraints:
+                    nullable: false
               - column:
                   name: transaction_type
                   type: varchar(255)
