--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <java.version>17</java.version>
         <testcontainers.version>1.17.2</testcontainers.version>
         <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
+        <sonar.organization>bycza-zagroda</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
