add date to financial trasaction - dev profile

--- a/src/main/resources/db/changelog/004-insert-into-financial_transactions.yaml
+++ b/src/main/resources/db/changelog/004-insert-into-financial_transactions.yaml
@@ -16,7 +16,7 @@ databaseChangeLog:
                   name: wallet_id
                   type: id
               - column:
-                  name: type
+                  name: transaction_type
                   type: varchar(255)
               - column:
                   name: amount
