--- a/src/main/resources/db/changelog/002-insert-into-wallets.yaml
+++ b/src/main/resources/db/changelog/002-insert-into-wallets.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
        author: iwona007
        changes:
          - loadData:
-             file: db/changelog/data/data.csv
+             file: db/changelog/data/wallet.csv
              tableName: wallets
              separator: ','
              encoding: UTF-8
