Refactoring/refactor wallet entity (#127)
* add date to financial trasaction - dev profile

* add date to financial trasaction - dev profile

* add remove and add methods to parent entity and equals and hashcode to child entity

* fix method remove and add

* code review implementation

---------

Co-authored-by: Dawid Bielecki <dawciobiel@gmail.com>

--- a/src/main/resources/db/changelog/002-insert-into-wallets.yaml
+++ b/src/main/resources/db/changelog/002-insert-into-wallets.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
        author: iwona007
        changes:
          - loadData:
-             file: db/changelog/data/data.csv
+             file: db/changelog/data/wallets.csv
              tableName: wallets
              separator: ','
              encoding: UTF-8
