feature: Add new file 007-add-new-column-and-foreignKey-to-financial_transaction.yaml change: add new line in dbchangelog-dev.yaml

--- a/src/main/resources/db/dbchangelog-dev.yaml
+++ b/src/main/resources/db/dbchangelog-dev.yaml
@@ -11,3 +11,5 @@ databaseChangeLog:
       file: db/changelog/005-create-table-financial_transaction_categories.yaml
   - include:
       file: db/changelog/006-insert-into-financial_transaction_categories.yaml
+  - include:
+      file: db/changelog/007-add-new-column-and-foreignKey-to-financial_transaction.yaml
