change: change of order yaml files in dbchangelog-dev.yaml feature: add yaml files to dbchangelog-test.yaml

--- a/src/main/resources/db/dbchangelog-test.yaml
+++ b/src/main/resources/db/dbchangelog-test.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: db/changelog/003-create-table-financial_transactions.yaml
   - include:
       file: db/changelog/005-create-table-financial_transaction_categories.yaml
+  - include:
+      file: db/changelog/007-add-new-column-and-foreignKey-to-financial_transaction.yaml
