--- a/src/main/resources/db/dbchangelog-dev.yaml
+++ b/src/main/resources/db/dbchangelog-dev.yaml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: db/changelog/007-add-new-column-and-foreignKey-to-financial_transaction.yaml
   - include:
       file: db/changelog/004-insert-into-financial_transactions.yaml
+  - include:
+      file: db/changelog/008-add-onDelete-to-financial-transaction-foreignKey.yaml
