enhancement: refactored name

--- a/src/main/resources/db/changelog/008-add-constraints-on-columns-in-database-tables.yaml
+++ b/src/main/resources/db/changelog/008-add-constraints-on-columns-in-database-tables.yaml
@@ -5,14 +5,4 @@ databaseChangeLog:
       changes:
         - sqlFile:
             dbms: 'mysql'
-            path: db/changelog/constrains.sql
-
-
-
-
-
-
-
-
-
-
+            path: db/changelog/008-add-constraints-on-columns-in-database-tables.sql
