enhancement/Add constraints on columns in database tables #206 (#228)
* enhancement: Add constraints on columns in database tables #206

* enhancement: added constraint name

* Delete empty lines.

* enhancement: Add constraints on columns in database tables #206

* enhancement: added constraint name

* enhancement: refactored name

* enhancement: deleted old constrains.sql

* change name for conflicted yalm file

* refactor: change name for conflicted yaml file

---------

Co-authored-by: Mirosław Gabruś <github@mirekgab.pl>
Co-authored-by: Iwona <51120038+Iwona007@users.noreply.github.com>
Co-authored-by: Iwona007 <iwonka.adamkiewicz@gmail.com>

--- a/src/main/resources/db/dbchangelog-dev.yaml
+++ b/src/main/resources/db/dbchangelog-dev.yaml
@@ -15,3 +15,5 @@ databaseChangeLog:
       file: db/changelog/004-insert-into-financial_transactions.yaml
   - include:
       file: db/changelog/008-add-onDelete-to-financial-transaction-foreignKey.yaml
+  - include:
+      file: db/changelog/009-add-constraints-on-columns-in-database-tables.yaml
