--- a/src/main/resources/db/dbchangelog-prod.yaml
+++ b/src/main/resources/db/dbchangelog-prod.yaml
@@ -5,3 +5,7 @@ databaseChangeLog:
       file: db/changelog/003-create-table-financial_transactions.yaml
   - include:
       file: db/changelog/005-create-table-financial_transaction_categories.yaml
+  - include:
+      file: db/changelog/010-alter-table-wallets.yaml
+  - include:
+      file: db/changelog/011-create-table-users.yaml
