--- a/src/main/resources/db/dbchangelog-test.yaml
+++ b/src/main/resources/db/dbchangelog-test.yaml
@@ -9,3 +9,7 @@ databaseChangeLog:
       file: db/changelog/007-add-new-column-and-foreignKey-to-financial_transaction.yaml
   - include:
       file: db/changelog/008-add-onDelete-to-financial-transaction-foreignKey.yaml
+  - include:
+      file: db/changelog/010-alter-table-wallets.yaml
+  - include:
+      file: db/changelog/011-create-table-users.yaml
