feature: add insert and constraint yaml files, add user csv file, change 010 yam file, dbchangelog-dev.yaml, user and wallet class and wallets.csv file

--- a/src/main/resources/db/changelog/010-alter-table-wallets.yaml
+++ b/src/main/resources/db/changelog/010-alter-table-wallets.yaml
@@ -7,7 +7,7 @@ databaseChangeLog:
             tableName: wallets
             columns:
             - column:
-                name: fk_user_id
+                name: user_id
                 type: bigint
                 constraints:
                   nullable: false
